feat: Add depth parameter to Fetch and Pull operations (#1605)
Enhanced the Fetch and Pull classes to support a new `depth` parameter for specifying operation depth. Introduced properties in RepositorySettings for managing fetch and pull depth settings. Updated localization files to include new depth-related strings. Modified AddRemote and UI components to accommodate the new depth functionality, allowing user configuration of fetch and pull depth.

--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -193,6 +193,8 @@
   <x:String x:Key="Text.Configure.Git.AutoFetchIntervalSuffix" xml:space="preserve">Minute(s)</x:String>
   <x:String x:Key="Text.Configure.Git.DefaultRemote" xml:space="preserve">Default Remote</x:String>
   <x:String x:Key="Text.Configure.Git.PreferredMergeMode" xml:space="preserve">Preferred Merge Mode</x:String>
+  <x:String x:Key="Text.Configure.Git.FetchDepth" xml:space="preserve">Fetch depth</x:String>
+  <x:String x:Key="Text.Configure.Git.PullDepth" xml:space="preserve">Pull depth</x:String>
   <x:String x:Key="Text.Configure.IssueTracker" xml:space="preserve">ISSUE TRACKER</x:String>
   <x:String x:Key="Text.Configure.IssueTracker.AddSampleAzure" xml:space="preserve">Add Azure DevOps Rule</x:String>
   <x:String x:Key="Text.Configure.IssueTracker.AddSampleGerritChangeIdCommit" xml:space="preserve">Add Gerrit Change-Id Commit Rule</x:String>
