--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -44,7 +44,7 @@
           <TextBlock Classes="tab_header" Text="{DynamicResource Text.Configure.Git}"/>
         </TabItem.Header>
 
-        <Grid Margin="16,4,16,8" RowDefinitions="32,32,32,32,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
+        <Grid Margin="16,4,16,8" RowDefinitions="32,32,32,32,32,32,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
           <TextBlock Grid.Row="0" Grid.Column="0"
                      HorizontalAlignment="Right" VerticalAlignment="Center"
                      Margin="0,0,8,0"
@@ -178,6 +178,40 @@
                        Margin="5,0,0,0"
                        Text="{DynamicResource Text.Configure.Git.AutoFetchIntervalSuffix}" />
           </StackPanel>
+          
+          <Grid Grid.Row="10" Grid.Column="1">
+            <CheckBox x:Name="FetchDepthCheckBox"
+                      Content="{DynamicResource Text.Configure.Git.FetchDepth}"
+                      IsChecked="{Binding EnableFetchDepth, Mode=TwoWay}"/>
+
+            <NumericUpDown Minimum="1" Increment="1"
+                           Height="26" Width="220"
+                           Margin="8,0,0,0" Padding="4"
+                           BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}"
+                           CornerRadius="3"
+                           ParsingNumberStyle="Integer"
+                           FormatString="0"
+                           Value="{Binding FetchDepthValue, Mode=TwoWay, FallbackValue=1}"
+                           IsEnabled="{Binding #FetchDepthCheckBox.IsChecked}"
+                           HorizontalAlignment="Right"/>
+          </Grid>
+        
+          <Grid Grid.Row="11" Grid.Column="1">
+            <CheckBox x:Name="PullDepthCheckBox"
+                      Content="{DynamicResource Text.Configure.Git.PullDepth}"
+                      IsChecked="{Binding EnablePullDepth, Mode=TwoWay}"/>
+
+            <NumericUpDown Minimum="1" Increment="1"
+                           Height="26" Width="220"
+                           Margin="8,0,0,0" Padding="4"
+                           BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}"
+                           CornerRadius="3"
+                           ParsingNumberStyle="Integer"
+                           FormatString="0"
+                           Value="{Binding PullDepthValue, Mode=TwoWay, FallbackValue=1}"
+                           IsEnabled="{Binding #PullDepthCheckBox.IsChecked}"
+                           HorizontalAlignment="Right"/>
+          </Grid>
         </Grid>
       </TabItem>
 
