--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -282,8 +282,8 @@
             <Grid RowDefinitions="*,1,Auto">
               <ListBox Grid.Row="0"
                        Background="Transparent"
-                       ItemsSource="{Binding IssueTrackerRules}"
-                       SelectedItem="{Binding SelectedIssueTrackerRule, Mode=TwoWay}"
+                       ItemsSource="{Binding IssueTrackers}"
+                       SelectedItem="{Binding SelectedIssueTracker, Mode=TwoWay}"
                        SelectionMode="Single">
                 <ListBox.Styles>
                   <Style Selector="ListBoxItem">
@@ -300,7 +300,7 @@
                 </ListBox.ItemsPanel>
 
                 <ListBox.ItemTemplate>
-                  <DataTemplate DataType="m:IssueTrackerRule">
+                  <DataTemplate DataType="m:IssueTracker">
                     <Grid ColumnDefinitions="Auto,*">
                       <Path Grid.Column="0" Width="14" Height="14" Data="{StaticResource Icons.Issue}"/>
                       <TextBlock Grid.Column="1" Text="{Binding Name}" Margin="8,0" TextTrimming="CharacterEllipsis"/>
@@ -315,16 +315,16 @@
                 <Button Classes="icon_button">
                   <Button.Flyout>
                     <MenuFlyout Placement="BottomEdgeAlignedLeft">
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.NewRule}" Command="{Binding NewIssueTracker}"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.NewRule}" Click="OnNewCustomIssueTracker"/>
                       <MenuItem Header="-"/>
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGitHub}" Command="{Binding AddSampleGitHubIssueTracker}"/>
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleJira}" Command="{Binding AddSampleJiraIssueTracker}"/>
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleAzure}" Command="{Binding AddSampleAzureWorkItemTracker}"/>
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGitLabIssue}" Command="{Binding AddSampleGitLabIssueTracker}"/>
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGitLabMergeRequest}" Command="{Binding AddSampleGitLabMergeRequestTracker}"/>
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGiteeIssue}" Command="{Binding AddSampleGiteeIssueTracker}"/>
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGiteePullRequest}" Command="{Binding AddSampleGiteePullRequestTracker}"/>
-                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGerritChangeIdCommit}" Command="{Binding AddSampleGerritChangeIdCommitTracker}"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGitHub}" Click="OnAddGitHubIssueTracker"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleJira}" Click="OnAddJiraIssueTracker"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleAzure}" Click="OnAddAzureWorkItemTracker"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGitLabIssue}" Click="OnAddGitLabIssueTracker"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGitLabMergeRequest}" Click="OnAddGitLabMergeRequestTracker"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGiteeIssue}" Click="OnAddGiteeIssueTracker"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGiteePullRequest}" Click="OnAddGiteePullRequestTracker"/>
+                      <MenuItem Header="{DynamicResource Text.Configure.IssueTracker.AddSampleGerritChangeIdCommit}" Click="OnAddGerritChangeIdTracker"/>
                     </MenuFlyout>
                   </Button.Flyout>
                   <Path Width="14" Height="14" Data="{StaticResource Icons.Plus}"/>
@@ -332,7 +332,7 @@
 
                 <Rectangle Width="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
 
-                <Button Classes="icon_button" Command="{Binding RemoveSelectedIssueTracker}">
+                <Button Classes="icon_button" Click="OnRemoveIssueTracker">
                   <Path Width="14" Height="14" Data="{StaticResource Icons.Minus}"/>
                 </Button>
 
@@ -343,7 +343,7 @@
 
           <ContentControl Grid.Column="1" Margin="16,0,0,0">
             <ContentControl.Content>
-              <Binding Path="SelectedIssueTrackerRule">
+              <Binding Path="SelectedIssueTracker">
                 <Binding.TargetNullValue>
                   <Path Width="64" Height="64"
                         HorizontalAlignment="Center"
@@ -355,7 +355,7 @@
             </ContentControl.Content>
 
             <ContentControl.DataTemplates>
-              <DataTemplate DataType="m:IssueTrackerRule">
+              <DataTemplate DataType="m:IssueTracker">
                 <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,32">
                   <TextBlock Grid.Row="0" Text="{DynamicResource Text.Configure.IssueTracker.RuleName}"/>
                   <TextBox Grid.Row="1" Margin="0,4,0,0" CornerRadius="3" Height="28" Text="{Binding Name, Mode=TwoWay}"/>
