--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -112,7 +112,7 @@
                     Width="26" Height="14"
                     Padding="0"
                     ToolTip.Tip="{DynamicResource Text.WorkingCopy.Unstaged.StageAll}"
-                    Command="{Binding StageAll}">
+                    Click="OnStageAllButtonClicked">
               <Path Width="14" Height="14" Data="{StaticResource Icons.DoubleDown}"/>
             </Button>
             <v:ChangeViewModeSwitcher Grid.Column="9"
@@ -166,7 +166,7 @@
               </ToolTip.Tip>
               <Path Width="14" Height="14" Margin="0,6,0,0" Data="{StaticResource Icons.Up}"/>
             </Button>
-            <Button Grid.Column="5" Classes="icon_button" Width="26" Height="14" Padding="0" ToolTip.Tip="{DynamicResource Text.WorkingCopy.Staged.UnstageAll}" Command="{Binding UnstageAll}">
+            <Button Grid.Column="5" Classes="icon_button" Width="26" Height="14" Padding="0" ToolTip.Tip="{DynamicResource Text.WorkingCopy.Staged.UnstageAll}" Click="OnUnstageAllButtonClicked">
               <Path Width="14" Height="14" Data="{StaticResource Icons.DoubleUp}"/>
             </Button>
             <v:ChangeViewModeSwitcher Grid.Column="6"
