--- a/src/Views/CommitChanges.axaml
+++ b/src/Views/CommitChanges.axaml
@@ -41,13 +41,15 @@
         <v:ChangeViewModeSwitcher Grid.Column="1"
                                   Width="18" Height="18"
                                   Margin="4,0,0,0"
-                                  ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeViewMode, Mode=TwoWay}"/>
+                                  ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeViewMode, Mode=TwoWay}"
+                                  SortMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeSortMode, Mode=TwoWay}"/>
       </Grid>
 
       <!-- Changes -->
       <Border Grid.Row="1" Margin="0,4,0,0" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1" Background="{DynamicResource Brush.Contents}">
         <v:ChangeCollectionView SelectionMode="Single"
                                 ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeViewMode}"
+                                SortMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeSortMode}"
                                 Changes="{Binding VisibleChanges}"
                                 SelectedChanges="{Binding SelectedChanges, Mode=TwoWay}"
                                 ContextRequested="OnChangeContextRequested"/>
