feature: add a button to scroll to the top of commit list
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -240,6 +240,17 @@
                      IsHitTestVisible="False"
                      ClipToBounds="True"/>
 
+      <Border Width="32" Height="32"
+              Margin="0,0,16,8"
+              CornerRadius="16"
+              Background="{DynamicResource Brush.Accent}"
+              HorizontalAlignment="Right" VerticalAlignment="Bottom"
+              Effect="drop-shadow(0 0 8 #80000000)"
+              PointerPressed="OnScrollToTopPointerPressed"
+              IsVisible="{Binding $parent[v:Histories].IsScrollToTopVisible}">
+        <Path Width="16" Height="16" Data="{StaticResource Icons.ScrollToTop}" Fill="White"/>
+      </Border>
+
       <v:LoadingIcon Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" IsVisible="{Binding IsLoading}"/>
     </Grid>
 
