enhance: add `Views.StealHotKey.Enter` to use hotkey `Enter` to start popup directly without checking focused `TextBox` (#1606)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/StashChanges.axaml
+++ b/src/Views/StashChanges.axaml
@@ -47,7 +47,8 @@
                AcceptsTab="True"
                VerticalContentAlignment="Top"
                Padding="4"
-               v:AutoFocusBehaviour.IsEnabled="True"/>
+               v:AutoFocusBehaviour.IsEnabled="True"
+               Tag="{Binding Source={x:Static v:StealHotKey.Enter}}"/>
 
       <CheckBox Grid.Row="2" Grid.Column="1"
                 Height="32"
