--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -763,6 +763,7 @@
   <x:String x:Key="Text.Submodule" xml:space="preserve">子模块</x:String>
   <x:String x:Key="Text.Submodule.Add" xml:space="preserve">添加子模块</x:String>
   <x:String x:Key="Text.Submodule.Branch" xml:space="preserve">跟踪分支</x:String>
+  <x:String x:Key="Text.Submodule.CopyBranch" xml:space="preserve">跟踪分支</x:String>
   <x:String x:Key="Text.Submodule.CopyPath" xml:space="preserve">相对路径</x:String>
   <x:String x:Key="Text.Submodule.Deinit" xml:space="preserve">取消初始化</x:String>
   <x:String x:Key="Text.Submodule.FetchNested" xml:space="preserve">拉取子孙模块</x:String>
