feature: double-clicking tag will try to checkout (detached mode) the revision refered by selected tag (#1661)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/TagsView.axaml
+++ b/src/Views/TagsView.axaml
@@ -96,6 +96,7 @@
             <Border Height="24"
                     Background="Transparent"
                     PointerPressed="OnItemPointerPressed"
+                    DoubleTapped="OnItemDoubleTapped"
                     ContextRequested="OnItemContextRequested"
                     ToolTip.Placement="Right">
               <ToolTip.Tip>
