--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1094,13 +1094,18 @@
     <Style Selector="^:checked">
       <Setter Property="Background" Value="{DynamicResource Brush.Accent}"/>
     </Style>
-    <Style Selector="^:checked Path">
+
+    <Style Selector="^ Path">
       <Setter Property="Fill" Value="White"/>
+      <Setter Property="Opacity" Value="0.8"/>
+    </Style>
+    <Style Selector="^:pointerover Path, ^:checked Path">
+      <Setter Property="Opacity" Value="1"/>
     </Style>
     <Style Selector="^ TextBlock">
       <Setter Property="Foreground" Value="{DynamicResource Brush.FG2}"/>
     </Style>
-    <Style Selector="^:checked TextBlock">
+    <Style Selector="^:pointerover TextBlock, ^:checked TextBlock">
       <Setter Property="Foreground" Value="White"/>
     </Style>
   </Style>
