--- a/src/Views/BranchTree.axaml
+++ b/src/Views/BranchTree.axaml
@@ -44,10 +44,7 @@
                 <StackPanel Orientation="Horizontal">
                   <Path Width="12" Height="12" Data="{StaticResource Icons.Branch}"/>
                   <TextBlock FontWeight="Bold" VerticalAlignment="Center" Margin="8,0,0,0" Text="{Binding FriendlyName}"/>
-                  <Border Background="Green" Margin="4,0,0,0" CornerRadius="4" VerticalAlignment="Center" IsVisible="{Binding IsLocal}">
-                    <TextBlock Text="{DynamicResource Text.BranchTree.Local}" FontSize="12" Classes="primary" Margin="4,1" Foreground="White" VerticalAlignment="Center"/>
-                  </Border>
-                  <Border Background="Gray" Margin="4,0,0,0" CornerRadius="4" VerticalAlignment="Center" IsVisible="{Binding !IsLocal}">
+                  <Border Background="Green" Margin="4,0,0,0" CornerRadius="4" VerticalAlignment="Center" IsVisible="{Binding !IsLocal}">
                     <TextBlock Text="{DynamicResource Text.BranchTree.Remote}" FontSize="12" Classes="primary" Margin="4,1" Foreground="White" VerticalAlignment="Center"/>
                   </Border>
                 </StackPanel>
