--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -784,8 +784,11 @@
   <x:String x:Key="Text.Submodule.Update" xml:space="preserve">更新</x:String>
   <x:String x:Key="Text.Submodule.URL" xml:space="preserve">仓库</x:String>
   <x:String x:Key="Text.Sure" xml:space="preserve">确    定</x:String>
-  <x:String x:Key="Text.TagCM.Copy" xml:space="preserve">复制标签名</x:String>
-  <x:String x:Key="Text.TagCM.CopyMessage" xml:space="preserve">复制标签信息</x:String>
+  <x:String x:Key="Text.Tag.Tagger" xml:space="preserve">创建者</x:String>
+  <x:String x:Key="Text.Tag.Time" xml:space="preserve">创建时间</x:String>
+  <x:String x:Key="Text.TagCM.Copy.Message" xml:space="preserve">标签信息</x:String>
+  <x:String x:Key="Text.TagCM.Copy.Name" xml:space="preserve">标签名</x:String>
+  <x:String x:Key="Text.TagCM.Copy.Tagger" xml:space="preserve">创建者</x:String>
   <x:String x:Key="Text.TagCM.CustomAction" xml:space="preserve">自定义操作</x:String>
   <x:String x:Key="Text.TagCM.Delete" xml:space="preserve">删除 ${0}$...</x:String>
   <x:String x:Key="Text.TagCM.Merge" xml:space="preserve">合并 ${0}$ 到 ${1}$...</x:String>
